# discord-media-mover

./: .dockerignore  .env.example  Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: main.yml
src/: discord_handler.rs  lib.rs  main.rs  utils.rs
