[package]
name = "discord-media-mover"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
linkify = "0.10.0"
serenity = { version = "0.12.5", default-features = false, features = ["rustls_backend", "cache", "gateway", "model", "http", "client"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "process"] }
tokio-rustls = "0.26.4"
